syntax = "proto2";

package leveler;

message ResourceConfig {
	repeated Resource Resources = 1;	
}

message Resource {
	required string Name = 1;
	required string Usage = 2;
	required string ShortDescription = 3;
	required string LongDescription = 4;
	repeated Option Options = 5;
}

message Option {
	required string Name = 1;
	required string ShortName = 2;
	required bool Required = 3;
	required string Type = 4;
	required string Description = 5;
}